cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_205.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:101: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:101:5: Write of unused value
99.       iv = &(*ivec)[0];
100.       c2l(iv, v0);
101.       c2l(iv, v1);
           ^
102.       if (enc) {
103.           while (l >= n) {
